<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_delete"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="2dp"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/bt_dataset"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/dataset"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="16dp"
            android:textSize="14sp"/>

    </LinearLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/zoom_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.project.ada.silversparro.views.DrawableView
                android:id="@+id/drawble_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@id/zoom_iv"
                android:layout_alignTop="@id/zoom_iv"
                android:hapticFeedbackEnabled="true"/>

            <com.project.ada.silversparro.views.ResizableRectangleView
                android:id="@+id/rectangle_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hapticFeedbackEnabled="true"
                android:visibility="gone"/>

        </FrameLayout>

        <RelativeLayout
            android:id="@+id/container_retry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_disable"
            android:visibility="gone">

            <Button
                android:id="@+id/bt_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/retry"
                android:textSize="18sp"
                android:textColor="@color/black_50"
                android:padding="10dp"/>

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/bt_unlock_zoom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginRight="5dp"
            android:text="@string/lock"/>
        <Button
            android:id="@+id/bt_save_and_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginLeft="5dp"
            android:text="@string/save_and_next"/>

    </LinearLayout>

</LinearLayout>
